# rust_into_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json
slides/: slides.html  slides.md
src/: CMakeLists.txt
src/c_lib/: CMakeLists.txt  c_lib.c  c_lib.h
src/cxx_app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/cxx_lib/: CMakeLists.txt  cxx_lib.cpp  cxx_lib.hpp
src/rs_lib/: CMakeLists.txt  Cargo.toml
src/rs_lib/src/: lib.rs
